# dri-gridded-mapper

./: .gitignore  README.md  example_mapping.json  pyproject.toml
.github/workflows/: test.yaml
doc/: index.md
examples/: chess-met.cdl  example_mapping.yaml
src/gridded-metadata/: fdri_mappings.py  mapper.py  model.py  netcdf.py
src/gridded_metadata/: fdri_mappings.py  main.py  mapper.py
src/gridded_metadata/model/: __init__.py  netcdf.py  zarr.py
tests/: helpers.py  test_netcdf.py  test_rdf.py  test_read_mappings.py  test_zarr.py
tests/data/: mappings.json  zarr_meta_1.json
