[build-system]
requires = ["setuptools >= 61.0", "autosemver"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
dependencies = [
    "autosemver == 1.0.0",
    "setuptools",
    "pyright[nodejs]",
    "pydantic-settings",
    "netCDF4",
    "rdflib",
    "zarr",
    "rdf-mapper@git+https://github.com/epimorphics/rdf-mapper"
]
name = "gridded_metadata"
version = "0.2.0"
description = "Simple metadata extractor for gridded datasets"
authors = [
    { name = "Kal Ahmed", email = "kal.ahmed@epimorphics.com" },
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-rtd-theme"]
lint = ["ruff"]
dev = ["gridded_metadata[test,docs,lint]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gridded_metadata*"]

[project.scripts]
gridded-mapper = "gridded_metadata.main:run_main"

[tool.pytest.ini_options]
addopts = ""
markers = ["slow: Marks slow tests"]

filterwarnings = [
    "ignore::DeprecationWarning:autosemver.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py"]
line-length = 128

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "A",
    "PLC",
    "PLE",
    "PLW",
    "I",
    "N816",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.pyright]
executionEnvironments = [{ root = "src" }]
typeCheckingMode = "basic"
venvPath = "."
venv = "venv"